--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--navigation-->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>
+                RUN BUDDY
             </h1>
             <nav>
                 <!--Unordered list element-->
