--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--navigation-->
         <header>
             <h1>
-                RUN BUDDY
+                <a href="/">RUN BUDDY</a>
             </h1>
             <nav>
                 <!--Unordered list element-->
@@ -31,10 +31,39 @@
                 </ul>
             </nav>
         </header>
-        <!--hero/jumbotron-->
-        <section>
 
-        </section>
+        <!--hero/jumbotron-->
+    <section class="hero">
+        <div class="hero-form">
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!--Add form element-->
+            <form>
+                <label for="name">Enter full name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <label for="email"> Email:</label>
+                <input type="email" placeholder="Your Email" email="email" id="email"/>
+                <label for="phone"> Phone Number:</label>
+                <input type="tel" placeholder="Your Phone Number" phone="phone" id="phone"/>
+                <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no"/>
+                    <label for="trainer-no">No</label>
+                </p>
+                <p>
+                    <label for ="checkbox">
+                    I acknowledge that I am at least 18 years of age hola como sa
+                    </label>
+                    <input type="checkbox" name="age-confirm" id="checkbox"/>
+                </p>
+                <button type="submit">
+                    Get running!
+                </button>
+            </form>
+        </div>
+     </section>
         <!--"what we do" section-->
         <section>
             <h2>What We Do</h2>    
@@ -54,9 +83,10 @@
         <!--footer-->
         <footer>
             <h2>❤ Made with love by Run Buddy.</h2>
+            <div>
+                <a href="#"> Read Our Policy Policy</a><br/>
+            &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
-
-
     </body>
-    
 </html>
