--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <!--Add form element-->
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
                 <label for="email"> Email:</label>
-                <input type="email" placeholder="Your Email" email="email" id="email"/>
+                <input type="email" placeholder="Your Email" email="email" id="email" class="form-input">
                 <label for="phone"> Phone Number:</label>
-                <input type="tel" placeholder="Your Phone Number" phone="phone" id="phone"/>
+                <input type="tel" placeholder="Your Phone Number" phone="phone" id="phone" class="form-input">
                 <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes"/>
@@ -65,12 +65,34 @@
         </div>
      </section>
         <!--"what we do" section-->
-        <section>
-            <h2>What We Do</h2>    
+        <section id="what-we-do">
+            <h2>What We Do</h2>  
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Bansky direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings Marfa Schlitz sustainble Intelligentsia unami deep v craft
+            </p>    
         </section>
         <!--"what you do" section-->
-         <section>
-             <h2>What You Do</h2> 
+         <section id="what-you-do">
+             <h2>What You Do</h2>
+             <div>
+                 <img src="step-1.svg" alt=""/>
+                 <h3>Step 1: Fill out the form Above.</h3>
+                 <p> You're already here, do why not?</p>
+             </div>
+             <div>
+                 <img src="step-2.svg" alt=""/>
+                 <h3>Step 2: Consult with One of Our Trainers.</h3>
+                 <p>Are you here to build muscle, loser weight, or just feel good?</p>
+             </div>
+             <div>
+                 <img src="step-3.svg" alt=""/>
+                 <h3>Step 3: Get Running.</h3>
+                 <p>Hit the ground running(literally) once your trainer lays out your plan.</p>
+             </div>
+             <div>
+                 <img src="step-4.svg" alt=""/>
+                 <h3>Step 4: See Results.</h3>
+                 <p>Bi-Weekly checkins with your trainer will keep you focused</p>
         </section>
         <!--"meet the trainers" section-->
         <section>
