--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="file:///Users/hectorpalacios/assets/css/style-1.css">
     </head>
     <body>
         <!--navigation-->
@@ -37,16 +37,15 @@
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
-            <!--Add form element-->
             <form>
                 <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
                 <label for="email"> Email:</label>
-                <input type="email" placeholder="Your Email" email="email" id="email" class="form-input">
+                <input type="email" placeholder="Email Adress" email="email" id="email" class="form-input">
                 <label for="phone"> Phone Number:</label>
-                <input type="tel" placeholder="Your Phone Number" phone="phone" id="phone" class="form-input">
+                <input type="tel" placeholder="Phone Number" phone="phone" id="phone" class="form-input">
                 <p>
-                    Have you worked out with a trainer before?
+                    "Have you worked out with a trainer before?"
                     <input type="radio" name="trainer-confirm" id="trainer-yes"/>
                     <label for="trainer-yes">Yes</label>
                     <input type="radio" name="trainer-confirm" id="trainer-no"/>
@@ -54,53 +53,107 @@
                 </p>
                 <p>
                     <label for ="checkbox">
-                    I acknowledge that I am at least 18 years of age hola como sa
+                    I acknowledge that I am at least 18 years of age 
                     </label>
                     <input type="checkbox" name="age-confirm" id="checkbox"/>
                 </p>
-                <button type="submit">
-                    Get running!
-                </button>
+                <button type="submit">Get running!</button>
             </form>
-        </div>
-     </section>
+        </div>  
+            
+        </section>
         <!--"what we do" section-->
-        <section id="what-we-do">
-            <h2>What We Do</h2>  
-            <p>
+        <section id="what-we-do" class="intro">
+            <h2 class="section-title primary-border">What We Do</h2>
+            <p> 
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Bansky direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings Marfa Schlitz sustainble Intelligentsia unami deep v craft
             </p>    
         </section>
         <!--"what you do" section-->
-         <section id="what-you-do">
-             <h2>What You Do</h2>
+         <section id="what-you-do" class="steps">
+             <h2 class= "section-title secondary-border">What You Do</h2> 
              <div>
                  <img src="step-1.svg" alt=""/>
-                 <h3>Step 1: Fill out the form Above.</h3>
-                 <p> You're already here, do why not?</p>
+                 <h3>"Step 1:"
+                      <span>Fill Out the Form Above.</span></h3>
+                 <p>You're already here, so why not?</p>
              </div>
              <div>
                  <img src="step-2.svg" alt=""/>
-                 <h3>Step 2: Consult with One of Our Trainers.</h3>
-                 <p>Are you here to build muscle, loser weight, or just feel good?</p>
+                 <h3>"Step 2:" Consult with One of Our Trainers.</h3>
+                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
              </div>
              <div>
                  <img src="step-3.svg" alt=""/>
-                 <h3>Step 3: Get Running.</h3>
-                 <p>Hit the ground running(literally) once your trainer lays out your plan.</p>
+                 <h3>"Step 3:" Get Running.</h3>
+                 <p> Hit the ground running (literally) once you trainer lays out your plan.</p>
              </div>
              <div>
-                 <img src="step-4.svg" alt=""/>
-                 <h3>Step 4: See Results.</h3>
-                 <p>Bi-Weekly checkins with your trainer will keep you focused</p>
+                <img src="step-4.svg" alt=""/>
+                <h3>"Step 4:" See Results.</h3>
+                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+             </div>
         </section>
         <!--"meet the trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+            Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero atque distinctio sit! 
+                        Quod sequi ipsa impedit nam temporibus? Officia praesentium neque labore non saepe 
+                        nihil natus quae unde a iusto!
+                    </p>
+                </div>    
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio maxime soluta, minus, eius ut at nesciunt molestias expedita et aut laudantium iure magni commodi illum doloribus sed itaque laborum. Quo?</p>
+                </div>
+                <img src="trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+            </article>
+            <article class="trainer">
+                <img src="trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore fugit sit recusandae quaerat facilis officia qui maiores reiciendis, consequatur corrupti! Explicabo eveniet voluptatibus excepturi voluptas aut quidem, autem ipsa magnam!
+                    </p>
+                </div>
+            </article>
         </section>
         <!--"reach out"-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="contact-info">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13450.08683820477!2d-111.35092151525023!3d32.5656078980648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d5f6dce5efaa8d%3A0x473e05c7acd444f6!2s21130%20E%20Reunion%20Rd%2C%20Red%20Rock%2C%20AZ%2085145!5e0!3m2!1sen!2sus!4v1643702187790!5m2!1sen!2sus"
+               style="border:0;" 
+               allowfullscreen loading="lazy">
+               </iframe> 
+                <div> 
+                   <h3> Run Buddy</h3>
+                   <p>
+                       Any questions or concerns before signing up?
+                       <br/>
+                       Let us know and we'll be happy to talk to you!
+                   </p>
+                   <address>
+                       21130 E Treasure Rd <br/>
+                       Red Rock, Az <br/>
+                       85145<br/>
+                       P: 555.RUN.BUDZ (555.786.2839)<br/>
+                       E: <a href="mailto:paquito1981@outlook.com">paquito1981@outlook.com</a>
+                   </address>
+                </div>
+            </div>
         </section>
         <!--footer-->
         <footer>
